--- a/adatkez.html
+++ b/adatkez.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <link rel="stylesheet" href="css/rolam.css">
+    <link rel="stylesheet" href="css/adatkez.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rólam</title>
+    <title>Lajka Kristóf</title>
 </head>
 <body>
-    <div class="nav">
-        <div class="logo">
-            <img src="img/Fegyver-logo2.jpg">
-        </div>
-        <div class="nav_elements">
-    
-        </div>
+    <h1>Lajka Kristóf weboldala</h1>
     </div>
-    <div class="en">
+    <div class="linkek">
         <h1>Linkek</h1>
-            <a href="https://www.w3schools.com/mysql/mysql_datatypes.asp">MySQL adattípusok</a>
-            <a href="https://www.w3schools.com/mysql/mysql_constraints.asp">Korlátozások létrehozása</a>
-            <a href="https://www.w3schools.com/mysql/mysql_notnull.asp">MySQL NOT NULL korlátozás</a>
-            <a href="https://www.w3schools.com/mysql/mysql_create_index.asp">MySQL CREATE INDEX utasítás</a>
+        <ul>
+            <li>
+                <a href="https://www.w3schools.com/mysql/mysql_datatypes.asp" target="_blank">MySQL adattípusok</a>
+            </li>
+            <li>
+                <a href="https://www.w3schools.com/mysql/mysql_constraints.asp" target="_blank">Korlátozások létrehozása</a>
+            </li>
+            <li>
+                <a href="https://www.w3schools.com/mysql/mysql_notnull.asp" target="_blank">MySQL NOT NULL korlátozás</a>
+            </li>
+            <li>
+                <a href="https://www.w3schools.com/mysql/mysql_create_index.asp" target="_blank">MySQL CREATE INDEX utasítás</a>
+            </li>
+            <li>
+                <a href="https://www.w3schools.com/mysql/mysql_create_db.asp" target="_blank">MySQL CREATE DATABASE Statement</a>
+            </li>
+            <li>
+                <a href="https://www.w3schools.com/mysql/mysql_drop_db.asp" target="_blank">MySQL DROP DATABASE Statement</a>
+            </li>
+            <li>
+                <a href="https://www.w3schools.com/mysql/mysql_create_table.asp" target="_blank">MySQL CREATE TABLE Statement</a>
+            </li>
+            <li>
+                <a href="https://www.w3schools.com/mysql/mysql_drop_table.asp" target="_blank">MySQL DROP TABLE Statement</a>
+            </li>
+        </ul>    
     </div>
