--- a/adatkez.html
+++ b/adatkez.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
+    <title>Lajka Kristóf</title>
     <link rel="stylesheet" href="css/adatkez.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lajka Kristóf</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+    .fakeimg {
+      height: 200px;
+      background: #aaa;
+    }
+    </style>
 </head>
 <body>
     <h1>Lajka Kristóf weboldala</h1>
-    </div>
+    <p>11.A angol1 csoport 
+      <br>
+       MSZC Kandó Kálmán Informatikai Technikum</p> 
+  </div>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Adatbázis-kezelés</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.w3schools.com/mysql/default.asp" target="_blank">W3Schools - MySQL Tutorial</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://github.com/LajkaK2006/Adatbazis-kezeles" target="_blank">GitHub</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://mszc-kando.e-kreta.hu/Orarend/InformaciokOrarend" target="_blank">Kréta</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
+
     <div class="linkek">
         <h1>Linkek</h1>
         <ul>
@@ -37,5 +67,13 @@
             <li>
                 <a href="https://www.w3schools.com/mysql/mysql_drop_table.asp" target="_blank">MySQL DROP TABLE Statement</a>
             </li>
-        </ul>    
+        </ul>
+        <div class="container">
+            <p align="left"><strong>Adatbázis-kezelő rendszer Database Management System - DBMS</strong>: </p> 
+            <p align="center"><embed width="100%" height="900px" style="background-color:inherit" src="jegyzet_1.pdf"></p>
+          </div>
     </div>
+
+    <div class="mt-5 p-4 bg-dark text-white text-center">
+        <p>Készítette: Borbély Gergely <br> 2022/2023-as tanév</p>
+      </div>
